# memtier_benchmark

./: .clang-format  .dockerignore  .gitignore  1.json  AGENTS.md  CHANGES  DEVELOPMENT.md  Dockerfile  Dockerfile.alpine  FAST_HEADER_PROTOCOL.md  JSON_handler.cpp  JSON_handler.h  Makefile.am  README  README.import  README.md  STATSD_IMPLEMENTATION_CONTEXT.md  SUPPORT_BULKS.md  client.cpp  client.h  cluster_client.cpp  cluster_client.h  config.cmake.in  config_types.cpp  config_types.h  configure.ac  configure~  connections_manager.h  docker-compose.memcached.yml  docker-compose.redis.yml  docker-compose.statsd.yml  dockers.yml  file_io.cpp  file_io.h  item.cpp  item.h  memtier_benchmark.1  memtier_benchmark.cpp  memtier_benchmark.h  obj_gen.cpp  (+20 more)
.circleci/: config.yml
.github/workflows/: asan.yml  ci.yml  code-style.yml  dockers.yml  release-rpm.yml  release.yml  tsan.yml  ubsan.yml
bash-completion/: memtier_benchmark
debian/: changelog  control  copyright  manpages  rules  setup_sbuild.sh  watch
docs/: REALTIME_METRICS.md
examples/: hdr_decoder.c
grafana/dashboards/: memtier.json
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/datasources/: graphite.yml
graphite/: statsd-config.js  storage-schemas.conf
libmemcached_protocol/: binary.h  vbucket.h
m4/: ax_code_coverage.m4
memtier-benchmark-extension/: .eslintrc.js  .gitignore  DEVELOPMENT.md  README.md  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
memtier-benchmark-extension/public/: manifest.json
memtier-benchmark-extension/public/icons/: create-icons.md
memtier-benchmark-extension/scripts/: build.js
memtier-benchmark-extension/src/background/: service-worker.ts
memtier-benchmark-extension/src/components/: ConfigForm.tsx  ResultsDisplay.tsx
memtier-benchmark-extension/src/content/: content-script.ts
memtier-benchmark-extension/src/options/: options.html  options.tsx
memtier-benchmark-extension/src/popup/: popup.html  popup.tsx
memtier-benchmark-extension/src/shared/: benchmark-config.ts  storage.ts  types.ts  utils.ts
memtier-benchmark-extension/src/sidebar/: sidebar.html  sidebar.tsx
rpm/: memtier-benchmark.spec
src/: CMakeLists.txt  hdr_histogram_log.c  hdr_histogram_log.h  hdr_interval_recorder.h  hdr_thread.h  hdr_writer_reader_phaser.h
test/: hdr_histogram_benchmark.cpp  hdr_histogram_log_test.c  hdr_histogram_test.c  hdr_test_util.h  jHiccup-2.0.7S.logV3.hlog  test_tagged_invalid_tag_key.txt  test_tagged_invalid_timestamp.txt
tests/: data-import-2-keys-expiration.txt  data-import-2-keys.txt  include.py  mb.py  regression.json  run_tests.sh  test_client_staircase.py  test_cpu_stats.py  test_crash_handler_integration.py  test_monitor_input.py  test_reconnections.py  test_requirements.txt  test_scan.py  test_statsd.py  tests_oss_simple_flow.py  tests_oss_zipfian_distribution.py  zipfian_benchmark_runner.py
tests/tls/: ca.crt  ca.key  redis.crt  redis.key
utils/: prepare_release.sh
